samples/_failures_safe/1761505552_f4e8ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6646a893.c:154:46: error: ‘State’ defined as wrong kind of tag
  154 | void print_state_machine_status(const struct State
      |                                              ^~~~~
./samples/SAFE/__tmp_6646a893.c:155: error: expected ‘;’, ‘,’ or ‘)’ at end of input
